<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_view_products"
    android:background="@drawable/log_in_box"
    tools:context=".ViewProductsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TableRow>

                <TextView
                    android:id="@+id/styleTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/style" />

                <TextView
                    android:id="@+id/sizeTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/size" />

                <TextView
                    android:id="@+id/colourTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/colour" />

                <TextView
                    android:id="@+id/brandTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/brand" />

            </TableRow>
            <TableRow>

                <Spinner
                    android:id="@+id/styleSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:dropDownWidth="wrap_content"
                    android:nestedScrollingEnabled="true"
                    android:overlapAnchor="false"
                    android:dropDownVerticalOffset="50dp"
                    android:layout_gravity="center_horizontal"/>

                <Spinner
                    android:id="@+id/sizeSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:dropDownWidth="wrap_content"
                    android:nestedScrollingEnabled="true"
                    android:overlapAnchor="false"
                    android:layout_gravity="center_horizontal"/>

                <Spinner
                    android:id="@+id/colourSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:dropDownWidth="wrap_content"
                    android:nestedScrollingEnabled="true"
                    android:overlapAnchor="false"
                    android:layout_gravity="center_horizontal"/>

                <Spinner
                    android:id="@+id/brandSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:dropDownWidth="wrap_content"
                    android:nestedScrollingEnabled="true"
                    android:overlapAnchor="false"
                    android:dropDownVerticalOffset="50dp"
                    android:layout_gravity="center_horizontal"/>

            </TableRow>

            <TableRow>
                <Button
                    android:id="@+id/filter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/filter"
                    android:layout_column="0"
                    android:layout_span="2"
                    android:layout_gravity="center_horizontal"/>

                <Button
                    android:id="@+id/resetFilters"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/resetFilters"
                    android:layout_column="2"
                    android:layout_span="2"
                    android:layout_gravity="center_horizontal"/>
            </TableRow>


        </TableLayout>

      </androidx.appcompat.widget.Toolbar>



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/toolbar"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

</androidx.constraintlayout.widget.ConstraintLayout>